tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0183/input.js
(function () { 'use strict'; delete i; }())
